codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__status_surface__tests__fullscreen_plan_cycle_hint.snap
---
source: tui/src/bottom_pane/chat_composer/status_surface_tests.rs
expression: wide
---









› Ask Ore

  MODEL · ~/project · Context 20% used                                   Plan mode (⇧tab to cycle)
  ? for shortcuts
